
Package: PSCBS
==============

Version: 0.19.0 [2011-12-12]
o Added optional argument 'indices' to getLocusData() to be able
  to retrieve the locus-level data as indexed by input data.
o DOCUMENTATION: Clarified in help("segmentByCBS") how missing
  values are dealt with.


Version: 0.18.2 [2011-12-07]
o Now plotTracks() for CBS always returns an invisible object.
o BUG FIX: pruneBySdUndo() for CBS did not work with more than
  one array.


Version: 0.18.1 [2011-12-03]
o Added drawChangePoints() for AbstractCBS.
o Now pruneByHClust() for AbstractCBS updates the segment means.
o Added writeSegments() for PSCBS object.
o Now print() for AbstractCBS returns getSegments(..., simplify=TRUE).
o Added argument 'simplify' to getSegments().
o Added arguments 'name', 'tags' and 'exts' to writeSegments() and
  writeLocusData() and dropped 'filename'.


Version: 0.18.0 [2011-11-28]
o Added pruneByHClust() for AbstractCBS, with implementation
  for CBS and PairedPSCBS.
o extractCNs() for CBS would not return a matrix but a data.frame.
o BUG FIX: extractTotalCNs() for CBS would give an error.


Version: 0.17.4 [2011-11-26]
o Added argument 'updateMeans=TRUE' to callROH() for PairedPSCBS.
o Now bootstrapTCNandDHByRegion() for PairedPSCBS preserves NAs 
  for DH and (C1,C2) quantiles, if the DH mean level is NA, which
  can happen when a segment is called ROH.  This also makes sure
  that a segment called ROH will not be called AB.
o An internal sanity check of bootstrapTCNandDHByRegion() for
  PairedPSCBS would give an error if DH mean levels had been set
  to NA for segments called ROH.


Version: 0.17.3 [2011-11-24]
o Added callSegmentationOutliers() and dropSegmentationOutliers()
  for data frames.
o CLEANUP: Renamed field 'position' of the example data to 'x'.
  This helps us clean up some of the examples.
o BUG FIX: bootstrapTCNandDHByRegion() for PairedPSCBS would give
  an error, if a segment did not have any TCN signals, which can