@@ -5,6 +5,9 @@ Package: PSCBS
 Version: 0.19.0 [2011-12-12]
 o Added optional argument 'indices' to getLocusData() to be able
   to retrieve the locus-level data as indexed by input data.
+o BUG FIX: Now gapsToSegments() gave invalid segments for chromosomes
+  with more than one gap.  Now gapsToSegments() validates argument 
+  'gaps' and asserts that it returns non-overlapping segments.
 o DOCUMENTATION: Clarified in help("segmentByCBS") how missing
   values are dealt with.
 
